CodeMirror 3.12~core4

	* New codemirror mode, "sql".
	-- Charlie Powell <charlie@eval.bz>  Sat, 22 Mar 2014 14:54:54 -0400

CodeMirror 3.12~core3

	* Bump the copyright date to 2014.
	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 10:56:54 -0500

CodeMirror 3.12~core2

	* Make use of the namespace versions of View instead of static.
	* Forgot an ending ">" on a couple author lines.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 16:02:40 -0400

CodeMirror 3.12~core1

	* Initial version imported into Core.
	-- Charlie Powell <charlie@eval.bz>  Wed, 15 May 2013 10:24:32 -0400
