@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.12~core4" name="CodeMirror" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="5.6.0~core1" name="CodeMirror" execmode="web">
 	<requires>
 		<require name="core" type="component" version="3.1.0" operation="ge"/>
 	</requires>
 	<files>
-		<file filename="CHANGELOG" md5="05cb4f18e71c627aec8e656eda53f3cf"/>
+		<file filename="CHANGELOG" md5="2479d72c67b9cad69ade8770725c091b"/>
 		<file filename="classes/codemirror/Utils.php" md5="8024356fc1f9ad48d16203bf8b552246">
 			<class name="CodeMirror\Utils"/>
 		</file>
@@ -31,6 +31,7 @@
 		<upgrade from="3.12~core1" to="3.12~core2"/>
 		<upgrade from="3.12~core2" to="3.12~core3"/>
 		<upgrade from="3.12~core3" to="3.12~core4"/>
+		<upgrade from="3.12~core4" to="5.6.0~core1"/>
 	</upgrades>
 	<assets>
 		<file filename="assets/css/codemirror.css" md5="e80f3d7349a4563458e8088bce1ae39e"/>
